fixed the menu from being cut off

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -11,6 +11,7 @@
         align-items: center;
         background-color: #333;
         color: #fff;
+        z-index: 1000;
     }
 
     .mobile-brand-title {
@@ -90,27 +91,34 @@
     
     .desktop-navbar {
         background-color: #f3f3f3;
-        overflow: hidden;
         display: flex;
         align-items: baseline;
         padding: .5rem;
         gap: 1rem;
+        z-index: 1000; 
     }
 
     .link {
         background: none;
         border: none;
         text-decoration: none;
-        color: #777;
-        font-family: inherit;
-        font-size: inherit;
+        color: #555;
+        font-family: 'Nunito', Arial, Helvetica, sans-serif;
+        font-size: 1.2rem;
         cursor: pointer;
         padding: 0;
+        margin-right: 3rem;
     }
 
-    .dropdown.active+.link,
     .link:hover {
-        color: #000;
+        font-weight: 800;
+        transition: ease .1s;
+    }
+
+    .dropdown.active + .link,
+    .link:hover {
+        font-family: 'Nunito', Arial, Helvetica, sans-serif;
+        color: #1c8cee;
     }
 
     .dropdown {
@@ -124,18 +132,30 @@
         background-color: #fff;
         padding: .75rem;
         border-radius: .25rem;
-        box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
-        z-index: 1000;
+        box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.6);
         opacity: 0;
         pointer-events: none;
         transition: opacity 150ms ease, transform 150ms ease;
         transform: translateY(-10px);
+        
     }
 
-    .dropdown.active>.link+.dropdown-menu {
+    .dropdown.active > .link + .dropdown-menu {
         opacity: 1;
         transform: translateY(0px);
         pointer-events: auto;
+    }
+
+    .dropdown-heading {
+        font-family: 'Nunito', Arial, Helvetica, sans-serif;
+        font-weight: 800;
+        margin-bottom: 7px;
+    }
+
+    .dropdown-heading-underline {
+        background-color: #999;
+        height: 1px;
+        border-radius: 50px;
     }
 
     .information-grid {
